[FIX] web: allow hidden column chooser overflow over chatter
The dropdown was overflowing below the chatter, making it unusable under some circumstances.

@moduon MT-4598 OPW-3684703

X-original-commit: e9a862529a3f378abfe1f0df8ea7ce309e027198

--- a/addons/web/static/src/views/list/list_renderer.scss
+++ b/addons/web/static/src/views/list/list_renderer.scss
@@ -278,6 +278,7 @@
             width: 32px;
             min-width: 32px;
             background-color: var(--ListRenderer-thead-bg-color);
+            z-index: 100;
         }
 
         .o_data_row.o_list_no_open {
